--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
     "postinstall": "electron-builder install-app-deps",
-    "postuninstall": "electron-builder install-app-deps"
+    "postuninstall": "electron-builder install-app-deps",
+    "rebuild": "electron-rebuild -f -w sqlite3"
   },
   "dependencies": {
     "@angular/animations": "^14.2.0",
@@ -32,11 +33,18 @@
     "@nestjs/common": "^9.1.4",
     "@nestjs/core": "^9.1.4",
     "@nestjs/microservices": "^9.1.4",
+    "@nestjs/typeorm": "^9.0.1",
+    "aws-sdk": "^2.1241.0",
+    "bcrypt": "^5.1.0",
     "bytenode": "^1.3.6",
+    "mock-aws-s3": "^4.0.2",
     "ng-devui": "^14.0.0",
+    "nock": "^13.2.9",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.5.7",
+    "sqlite3": "^5.1.2",
     "tslib": "^2.3.0",
+    "typeorm": "^0.3.10",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
@@ -45,9 +53,11 @@
     "@angular/cli": "~14.2.6",
     "@angular/compiler-cli": "^14.2.0",
     "@antfu/eslint-config": "^0.27.0",
+    "@types/bcrypt": "^5.0.0",
     "@types/jasmine": "~4.0.0",
-    "electron": "^21.1.1",
-    "electron-builder": "^23.6.0",
+    "@types/keyv": "^4.2.0",
+    "electron": "20.2.0",
+    "electron-builder": "23.3.3",
     "electron-rebuild": "^3.2.9",
     "esbuild": "0.15.10",
     "jasmine-core": "~4.3.0",
@@ -56,11 +66,12 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.0.0",
+    "keyv": "^4.5.0",
     "kolorist": "^1.6.0",
-    "pnpm": "^7.13.4",
+    "pnpm": "^7.12.2",
     "rimraf": "^3.0.2",
     "simple-git-hooks": "^2.8.0",
-    "typescript": "^4.8.4",
-    "vite": "^3.1.8"
+    "typescript": "^4.8.3",
+    "vite": "^3.1.3"
   }
 }
