--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "aws-sdk": "^2.1241.0",
     "bcrypt": "^5.1.0",
     "bytenode": "^1.3.6",
+    "class-validator": "^0.13.2",
     "mock-aws-s3": "^4.0.2",
     "ng-devui": "^14.0.0",
     "nock": "^13.2.9",
