--- a/package.json
+++ b/package.json
@@ -32,12 +32,12 @@
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
     "@nestjs/common": "^9.1.4",
     "@nestjs/core": "^9.1.4",
+    "@nestjs/jwt": "^9.0.0",
     "@nestjs/microservices": "^9.1.4",
     "@nestjs/typeorm": "^9.0.1",
     "aws-sdk": "^2.1241.0",
     "bcrypt": "^5.1.0",
     "bytenode": "^1.3.6",
-    "class-validator": "^0.13.2",
     "mock-aws-s3": "^4.0.2",
     "ng-devui": "^14.0.0",
     "nock": "^13.2.9",
@@ -57,7 +57,7 @@
     "@types/bcrypt": "^5.0.0",
     "@types/jasmine": "~4.0.0",
     "@types/keyv": "^4.2.0",
-    "electron": "20.2.0",
+    "electron": "^21.1.0",
     "electron-builder": "23.3.3",
     "electron-rebuild": "^3.2.9",
     "esbuild": "0.15.10",
