--- a/package.json
+++ b/package.json
@@ -17,42 +17,29 @@
     "rebuild": "electron-rebuild -f -w sqlite3"
   },
   "dependencies": {
-    "@angular/animations": "^14.2.0",
-    "@angular/common": "^14.2.0",
-    "@angular/compiler": "^14.2.0",
-    "@angular/core": "^14.2.0",
-    "@angular/forms": "^14.2.0",
-    "@angular/platform-browser": "^14.2.0",
-    "@angular/platform-browser-dynamic": "^14.2.0",
-    "@angular/router": "^14.2.6",
-    "@devui-design/icons": "^1.3.0",
-    "@fortawesome/angular-fontawesome": "^0.11.1",
-    "@fortawesome/fontawesome-svg-core": "^6.1.1",
-    "@fortawesome/free-brands-svg-icons": "^6.2.0",
-    "@fortawesome/free-solid-svg-icons": "^6.1.1",
     "@nestjs/common": "^9.1.4",
     "@nestjs/core": "^9.1.4",
     "@nestjs/jwt": "^9.0.0",
     "@nestjs/microservices": "^9.1.4",
     "@nestjs/typeorm": "^9.0.1",
+    "@vitejs/plugin-vue": "^3.1.0",
     "aws-sdk": "^2.1241.0",
     "bcrypt": "^5.1.0",
     "bytenode": "^1.3.6",
+    "class-validator": "^0.13.2",
     "mock-aws-s3": "^4.0.2",
-    "ng-devui": "^14.0.0",
     "nock": "^13.2.9",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.5.7",
     "sqlite3": "^5.1.2",
     "tslib": "^2.3.0",
     "typeorm": "^0.3.10",
+    "vue": "^3.2.38",
+    "vue-tsc": "^1.0.3",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
     "@anatine/esbuild-decorators": "^0.2.19",
-    "@angular-devkit/build-angular": "^14.2.6",
-    "@angular/cli": "~14.2.6",
-    "@angular/compiler-cli": "^14.2.0",
     "@antfu/eslint-config": "^0.27.0",
     "@types/bcrypt": "^5.0.0",
     "@types/jasmine": "~4.0.0",
@@ -62,11 +49,6 @@
     "electron-rebuild": "^3.2.9",
     "esbuild": "0.15.10",
     "jasmine-core": "~4.3.0",
-    "karma": "~6.4.0",
-    "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage": "~2.2.0",
-    "karma-jasmine": "~5.1.0",
-    "karma-jasmine-html-reporter": "~2.0.0",
     "keyv": "^4.5.0",
     "kolorist": "^1.6.0",
     "pnpm": "^7.12.2",
