--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "rebuild": "electron-rebuild -f -w sqlite3"
   },
   "dependencies": {
+    "@devui-design/icons": "^1.3.0",
     "@nestjs/common": "^9.1.4",
     "@nestjs/core": "^9.1.4",
     "@nestjs/jwt": "^9.0.0",
@@ -22,6 +23,7 @@
     "bcrypt": "^5.1.0",
     "bytenode": "^1.3.6",
     "class-validator": "^0.13.2",
+    "devui-theme": "^0.0.4",
     "mock-aws-s3": "^4.0.2",
     "nock": "^13.2.9",
     "reflect-metadata": "^0.1.13",
@@ -30,6 +32,7 @@
     "tslib": "^2.3.0",
     "typeorm": "^0.3.10",
     "vue": "^3.2.38",
+    "vue-devui": "^1.3.0",
     "vue-tsc": "^1.0.3",
     "zone.js": "~0.11.4"
   },
