--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "bytenode": "^1.3.6",
     "mock-aws-s3": "^4.0.2",
     "ng-devui": "^14.0.0",
+    "ngx-markdown": "^14.0.1",
     "nock": "^13.2.9",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.5.7",
@@ -57,6 +58,7 @@
     "@types/bcrypt": "^5.0.0",
     "@types/jasmine": "~4.0.0",
     "@types/keyv": "^4.2.0",
+    "@types/validator": "^13.7.10",
     "electron": "^21.1.0",
     "electron-builder": "23.3.3",
     "electron-rebuild": "^3.2.9",
