--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,6 +11,7 @@
     "noImplicitAny": false,
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true,
+    "suppressImplicitAnyIndexErrors": true,
     "baseUrl": ".",
     "lib": ["esnext", "dom"],
     "types": ["vite/client", "./src/preload"],
